--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -5,32 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
+    android:background="@drawable/background"
     tools:context=".Main">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/logo"
+        android:layout_above="@+id/btnPlay"
+        android:layout_centerHorizontal="true" />
+
     <ImageButton
-        android:id="@+id/playBtn"
+        android:id="@+id/btnPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="clickPlayButton"
-        android:elevation="0dp"
         android:background="@null"
-        app:srcCompat="@drawable/button_grey_play"
-        android:layout_marginStart="53dp" />
+        app:srcCompat="@drawable/player_play"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 
     <TextView
         android:id="@+id/CurrentHeader"
         android:text="@string/currentSongHeader"
         android:textStyle="bold"
+        android:textColor="@android:color/darker_gray"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="160dp"/>
+        android:layout_below="@+id/btnPlay"
+        android:layout_marginTop="10dp"
+        />
 
     <TextView
         android:id="@+id/CurrentSong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:textColor="@android:color/darker_gray"
         android:layout_below="@+id/CurrentHeader"
         android:layout_toEndOf="@+id/CurrentHeader"
         android:layout_alignTop="@+id/CurrentHeader"
@@ -43,10 +56,11 @@
         android:editable="true"
         android:text="@string/lastSongsHeader"
         android:textStyle="bold"
+        android:textColor="@android:color/darker_gray"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/CurrentHeader"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:id="@+id/LastSongs"
@@ -54,9 +68,19 @@
         android:layout_height="wrap_content"
         android:editable="true"
         android:text=""
+        android:textColor="@android:color/darker_gray"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/LastHeader"
         android:layout_marginTop="10dp"
         android:layout_marginStart="50dp"/>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
